fixes text wrapping in some situations

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -137,6 +137,7 @@ nav {
 
   p {
     margin-right: 40px;
+    margin-left: 173px;
 
     @media (max-width: 991px) {
       & {
